tests/baselines/reference/declarationEmitUsingTypeAlias1.errors.txt
src/index.ts(3,14): error TS2742: The inferred type of 'foo' cannot be named without a reference to '../node_modules/some-dep/dist/inner'. This is likely not portable. A type annotation is necessary.
src/index.ts(7,14): error TS2742: The inferred type of 'bar' cannot be named without a reference to '../node_modules/some-dep/dist/inner'. This is likely not portable. A type annotation is necessary.


==== node_modules/some-dep/dist/inner.d.ts (0 errors) ====
    export declare type Other = { other: string };
    export declare type SomeType = { arg: Other };
    
==== node_modules/some-dep/dist/index.d.ts (0 errors) ====
    export type OtherType = import('./inner').Other;
    export type SomeType = import('./inner').SomeType;
    
==== node_modules/some-dep/package.json (0 errors) ====
    {
      "name": "some-dep",
      "exports": {
        ".": "./dist/index.js"
      }
    }
    
==== src/index.ts (2 errors) ====
    import { SomeType } from "some-dep";
    
    export const foo = (thing: SomeType) => {
                 ~~~
!!! error TS2742: The inferred type of 'foo' cannot be named without a reference to '../node_modules/some-dep/dist/inner'. This is likely not portable. A type annotation is necessary.
      return thing;
    };
    
    export const bar = (thing: SomeType) => {
                 ~~~
!!! error TS2742: The inferred type of 'bar' cannot be named without a reference to '../node_modules/some-dep/dist/inner'. This is likely not portable. A type annotation is necessary.
      return thing.arg;
    };